# orion_module

./: .env.example  .gitignore  CLAUDE.md  EclipseAPIDocs.md  PLAN_orion_api_expansion.md  README.rst  pyproject.toml
.circleci/: config.yml
docs/: API_REFERENCE.md
docs/adr/: 0001-eclipse-v1-v2-class-split.md
examples/: .env.example  trade_instance_demo.py
models/: 100_equities.txt  100_equity.txt  100_equity_small.txt  50_equity.txt  55_equity.txt  60_equity.txt  65_equity.txt  70_equity.txt  75_equity.txt  80_equity.txt  85_equity.txt  90_equity.txt  95_equity.txt  test_model.txt
orion_module/: __init__.py
orionapi/: __init__.py  models.py
scripts/: gen_api_reference.py
security_sets/: cash_funds.txt  equity.txt  equity_small_accounts.txt  equity_testing.txt  fixed_income.txt
tests/: conftest.py  test_features.py  test_integration.py  test_new_endpoints.py  test_orion_module.py  test_security.py  test_thread_safety.py
