[tool.poetry]
name = "orionapi"
version = "1.4.1"
description = "A python interface for the Orion Advisors platform web API"
authors = ["spencerogden-dsam <67068943+spencerogden-dsam@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
tabulate = "^0.8.9"
rapidfuzz = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
python-dotenv = "^1.0.0"
ruff = "^0.8.0"
pytest-cov = ">=4.0,<5.0"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501", "A002"]  # A002: Allow shadowing builtins in API parameters

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
