[tool.poetry]
name = "orionapi"
version = "2.11.0"
description = "A python interface for the Orion Advisors platform web API"
authors = ["spencerogden-dsam <67068943+spencerogden-dsam@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
tabulate = "^0.8.9"
rapidfuzz = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
python-dotenv = "^1.0.1"
ruff = "^0.8.0"
pytest-cov = ">=5.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501", "A002", "UP038"]
# A002: Allow shadowing builtins in API parameters
# UP038: isinstance(x, (A, B)) is faster at runtime than isinstance(x, A | B);
#        the rule was later deprecated by ruff for the same reason.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
